<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/permission_guide_outer_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.intro.PermissionGuideActivity"
        android:background="@color/dark_gray"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/permission_guide_inner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >


        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/permission_guide_inner_container_wrapper"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingHorizontal="30dp"
                android:paddingVertical="30dp">

            <TextView
                    android:id="@+id/permission_guide_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_guide_title_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

            <TextView
                    android:id="@+id/permission_guide_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_guide_subtitle_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/permission_guide_title"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/permission_guide_permission_container"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/permission_guide_subtitle"
                    android:background="@color/gray_100"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@+id/permission_guide_subtitle">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/permission_guide_permission_camera_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        android:paddingVertical="10dp">

                    <ImageView
                            android:id="@+id/permission_guide_permission_dot_camera"
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:src="@drawable/background_permission_guide_dot"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                            android:id="@+id/permission_guide_permission_name_camera"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/permission_guide_permission_name_camera_text"
                            app:layout_constraintStart_toEndOf="@+id/permission_guide_permission_dot_camera"
                            app:layout_constraintTop_toTopOf="@+id/permission_guide_permission_dot_camera"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/gray_400"
                            app:layout_constraintBottom_toBottomOf="@+id/permission_guide_permission_dot_camera" />

                    <TextView
                            android:id="@+id/permission_guide_permission_camera_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/permission_guide_permission_description_camera_text"
                            app:layout_constraintStart_toEndOf="@+id/permission_guide_permission_name_camera"
                            app:layout_constraintTop_toTopOf="@+id/permission_guide_permission_name_camera"
                            android:layout_marginStart="15dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textColor="@color/gray_400" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/permission_guide_permission_help_message_container"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/permission_guide_permission_container"
                    app:layout_constraintStart_toStartOf="@+id/permission_guide_permission_container"
                    android:layout_marginTop="20dp">

                <ImageView
                        android:id="@+id/permission_guide_permission_help_message_dot"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:src="@drawable/background_permission_guide_dot"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp" />

                <TextView
                        android:id="@+id/permission_guide_permission_help_message"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_guide_permission_help_message_text"
                        app:layout_constraintStart_toEndOf="@+id/permission_guide_permission_help_message_dot"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="@color/gray_400" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/permission_guide_permission_help_message_container"
                    app:layout_constraintStart_toStartOf="@+id/permission_guide_permission_help_message_container"
                    android:layout_marginTop="10dp">

                <ImageView
                        android:id="@+id/permission_guide_permission_guidance_message_dot"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:src="@drawable/background_permission_guide_dot"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp" />

                <TextView
                        android:id="@+id/permission_guide_permission_guidance_message"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_guide_permission_guidance_message_text"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/permission_guide_permission_guidance_message_dot"
                        android:layout_marginStart="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="@color/gray_400" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
                android:id="@+id/permission_guide_accept_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_guide_accept_button_text"
                app:layout_constraintTop_toBottomOf="@+id/permission_guide_inner_container_wrapper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/purple"
                android:textColor="@color/white"
                android:paddingVertical="20dp"
                android:textStyle="bold"
                android:textSize="15sp"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>